--- a/about-us.html
+++ b/about-us.html
@@ -38,8 +38,8 @@
     <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
     <ul class="menu">
         <li><a href="./index.html" class="menu__item text-default">Home</a></li>
-<!--        <li><a href="#" class="menu__item text-default">Services</a></li>-->
-<!--        <li><a href="#" class="menu__item text-default">Plans</a></li>-->
+        <!--        <li><a href="#" class="menu__item text-default">Services</a></li>-->
+        <!--        <li><a href="#" class="menu__item text-default">Plans</a></li>-->
         <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
         <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
         <li><a href="./about-us.html" class="menu__item text-default active">About us</a></li>
@@ -61,13 +61,19 @@
     <div class="row section">
         <div class="col-xl-12 section__header">
             <p class="section__title">About us and Our team</p>
-            <p class="section__description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            <p class="section__description page__description__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummyLorem Ipsum is simply dummy text of the printing and
                 typesetting industry. Lorem Ipsum has been the industry's standard dummyLorem Ipsum is simply dummy text
                 of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummyLorem Ipsum
                 is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                 standard dummy
             </p>
+            <div class="section__load__additional">
+                <div class="hexagon__shadow">
+                    <button class="hexagon__button hexagon__transparent text-default read__more__desc">Read More
+                    </button>
+                </div>
+            </div>
             <img src="assets/images/icons/line.svg" class="section__title__line" alt="header">
         </div>
         <div class="col-xl-12 section__about-us">
@@ -86,7 +92,8 @@
                                 <p class="team__member__position text-default">lorem ipsum lorem ipsum</p>
                             </div>
                         </div>
-                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the industry's standard dummy
                         </p>
                     </div>
@@ -105,7 +112,8 @@
                                 <p class="team__member__position text-default">lorem ipsum lorem ipsum</p>
                             </div>
                         </div>
-                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the industry's standard dummy
                         </p>
                     </div>
@@ -124,7 +132,8 @@
                                 <p class="team__member__position text-default">lorem ipsum lorem ipsum</p>
                             </div>
                         </div>
-                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the industry's standard dummy
                         </p>
                     </div>
@@ -143,7 +152,8 @@
                                 <p class="team__member__position text-default">lorem ipsum lorem ipsum</p>
                             </div>
                         </div>
-                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the industry's standard dummy
                         </p>
                     </div>
@@ -162,7 +172,8 @@
                                 <p class="team__member__position text-default">lorem ipsum lorem ipsum</p>
                             </div>
                         </div>
-                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the industry's standard dummy
                         </p>
                     </div>
@@ -181,7 +192,8 @@
                                 <p class="team__member__position text-default">lorem ipsum lorem ipsum</p>
                             </div>
                         </div>
-                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        <p class="team__member__info text-default">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
                             industry. Lorem Ipsum has been the industry's standard dummy
                         </p>
                     </div>
