--- a/index.html
+++ b/index.html
@@ -626,6 +626,9 @@
     <p class="footer__copy-right">Copyrights by BEEBRAND</p>
 </div>
 
+<button class="hexagon__button hexagon__transparent" data-toggle="modal"
+        data-target="#congratulations">asd</button>
+
 <!-- Congratulations Modal -->
 <div class="modal fade" id="congratulations" tabindex="-1" role="dialog" aria-labelledby="congratulations"
      aria-hidden="true">
