--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <div class="col-12">
             <ul class="section__portfolio__filter">
                 <li><a href="#">All</a></li>
-                <li><a href="#" class="active">Photo</a></li>
+                <li class="active"><a href="#" class="active">Photo</a></li>
                 <li><a href="#">Video</a></li>
                 <li><a href="#">Design</a></li>
                 <li><a href="#">Web</a></li>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="row page__description">
-        <div class="col-xl-6 col-12 page__description__left">
+        <div class="col-lg-6 col-12 page__description__left">
             <div class="service__hexagon page__description__hexagon hx-0">
                 <span class="portfolio__hexagon__text">Product photo</span>
             </div>
@@ -89,12 +89,17 @@
                 <span class="portfolio__hexagon__text">Other Product</span>
             </div>
         </div>
-        <div class="col-xl-6 col-12">
-            <p class="text-default page__description__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+        <div class="col-lg-6 col-12">
+            <p class="text-default page__description__text ">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummyLorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummyLorem Ipsum is simply dummy text of the printing and
                 typesetting industry.
             </p>
+        </div>
+        <div class="col-12 section__load__additional">
+            <div class="hexagon__shadow">
+                <button class="hexagon__button hexagon__transparent text-default read__more__desc">Read More</button>
+            </div>
         </div>
     </div>
     <div class="row section">
@@ -106,7 +111,7 @@
         </div>
         <div class="col-xl-12 section__portfolio">
             <div class="row">
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <a href="./projects.html" class="portfolio__about">
                         <span class="portfolio__about__title">Lorem Ipsum</span>
@@ -115,7 +120,7 @@
                              alt="icon">
                     </a>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -124,7 +129,7 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -133,7 +138,7 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -142,18 +147,23 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
+            </div>
+        </div>
+        <div class="col-12 section__load__additional">
+            <div class="hexagon__shadow">
+                <button class="hexagon__button hexagon__transparent text-default">See More</button>
             </div>
         </div>
     </div>
