--- a/blog.html
+++ b/blog.html
@@ -38,8 +38,8 @@
     <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
     <ul class="menu">
         <li><a href="./index.html" class="menu__item text-default">Home</a></li>
-<!--        <li><a href="#" class="menu__item text-default">Services</a></li>-->
-<!--        <li><a href="#" class="menu__item text-default">Plans</a></li>-->
+        <!--        <li><a href="#" class="menu__item text-default">Services</a></li>-->
+        <!--        <li><a href="#" class="menu__item text-default">Plans</a></li>-->
         <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
         <li><a href="./blog.html" class="menu__item text-default active">Blog</a></li>
         <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
@@ -71,7 +71,8 @@
 
                 <img src="assets/images/icons/line.svg" class="section__title__line" alt="header">
 
-                <p class="section__description">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__description page__description__text">Lorem Ipsum is simply dummy text of the printing
+                    and typesetting
                     industry.
                     Lorem Ipsum has been the industry's standard dummyLorem Ipsum is simply dummy text of the printing
                     and
@@ -84,93 +85,106 @@
                 </p>
             </div>
         </div>
+        <div class="col-12 section__load__additional">
+            <div class="hexagon__shadow">
+                <button class="hexagon__button hexagon__transparent text-default read__more__desc">Read More</button>
+            </div>
+        </div>
     </div>
 
     <div class="row section__blog__content">
-        <div class="col-xl-3 col-md-6 col-12 blog">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 blog">
             <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
                 <p class="section__blog__title text-default">Lorem Ipsum</p>
-                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting
                     industry. Lorem Ipsum has been the industry's
                 </p>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 col-12 blog">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 blog">
             <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
                 <p class="section__blog__title text-default">Lorem Ipsum</p>
-                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting
                     industry. Lorem Ipsum has been the industry's
                 </p>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 col-12 blog">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 blog">
             <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
                 <p class="section__blog__title text-default">Lorem Ipsum</p>
-                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting
                     industry. Lorem Ipsum has been the industry's
                 </p>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 col-12 blog">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 blog">
             <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
                 <p class="section__blog__title text-default">Lorem Ipsum</p>
-                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting
                     industry. Lorem Ipsum has been the industry's
                 </p>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 col-12 blog">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 blog">
             <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
                 <p class="section__blog__title text-default">Lorem Ipsum</p>
-                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting
                     industry. Lorem Ipsum has been the industry's
                 </p>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 col-12 blog">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 blog">
             <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
                 <p class="section__blog__title text-default">Lorem Ipsum</p>
-                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting
                     industry. Lorem Ipsum has been the industry's
                 </p>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 col-12 blog">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 blog">
             <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
                 <p class="section__blog__title text-default">Lorem Ipsum</p>
-                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting
                     industry. Lorem Ipsum has been the industry's
                 </p>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 col-12 blog">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 blog">
             <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
                 <p class="section__blog__title text-default">Lorem Ipsum</p>
-                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting
                     industry. Lorem Ipsum has been the industry's
                 </p>
             </div>
