--- a/about-project.html
+++ b/about-project.html
@@ -90,6 +90,10 @@
                 <input type="text" name="companyName" class="input-default-rounded company__name" placeholder="Name">
                 <textarea class="input-default-rounded project__details"></textarea>
             </div>
+            <div>
+                <input type="file" id="upload-file" class="upload-file">
+                <label for="upload-file" class="upload-file-label">Attach file</label>
+            </div>
         </div>
         <div class="col-12 section__row personal__info">
             <h2 class="about-project__title text-default">Personal Details</h2>
