--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                     <div class="section__services__item">
                         <div class="section__services__item-default">
                             <div class="service__default__content">
-                                <img src="assets/images/icons/branding-service-icon.svg" class="service__hexagon__icon"
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Plains_Zebra_Equus_quagga.jpg/266px-Plains_Zebra_Equus_quagga.jpg" class="service__hexagon__icon hover" alt="">
+                                <img src="assets/images/icons/branding-service-icon.svg" class="service__hexagon__icon default"
                                      alt="Branding">
                                 <div class="service__hexagon"></div>
                             </div>
@@ -355,7 +356,7 @@
             </ul>
             <div class="row">
                 <div class="col-xl-3 col-md-4 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" width="415" alt="Portfolio">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Plains_Zebra_Equus_quagga.jpg/266px-Plains_Zebra_Equus_quagga.jpg" class="portfolio__image" width="415" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title">Lorem Ipsum</span>
                         <span class="portfolio__about__subtitle">Lorem Ipsum</span>
@@ -364,7 +365,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-4 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
+                    <img src="https://www.komar.de/en/media/catalog/product/cache/5/image/9df78eab33525d08d6e5fb8d27136e95/N/G/NGX8-007_5.jpg" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
                         <span class="portfolio__about__subtitle text-ellipsis">Lorem Ipsum</span>
@@ -373,7 +374,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-4 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
+                    <img src="https://media.npr.org/assets/img/2021/10/15/gettyimages-456764036_wide-539c807321ba93e094a5b1e528ee46a60f5afb1e.jpg?s=1400" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
                         <span class="portfolio__about__subtitle text-ellipsis">Lorem Ipsum</span>
@@ -626,8 +627,8 @@
     <p class="footer__copy-right">Copyrights by BEEBRAND</p>
 </div>
 
-<button class="hexagon__button hexagon__transparent" data-toggle="modal"
-        data-target="#congratulations">asd</button>
+<!--<button class="hexagon__button hexagon__transparent" data-toggle="modal"-->
+<!--        data-target="#congratulations">Congrats</button>-->
 
 <!-- Congratulations Modal -->
 <div class="modal fade" id="congratulations" tabindex="-1" role="dialog" aria-labelledby="congratulations"
