--- a/portfolio.html
+++ b/portfolio.html
@@ -36,22 +36,24 @@
 
 <nav class="nav__menu d-flex">
     <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
-    <ul class="menu">
-        <li><a href="./index.html" class="menu__item text-default">Home</a></li>
-<!--        <li><a href="#" class="menu__item text-default">Services</a></li>-->
-<!--        <li><a href="#" class="menu__item text-default">Plans</a></li>-->
-        <li><a href="./portfolio.html" class="menu__item text-default active">Portfolio</a></li>
-        <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
-        <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
-        <li><a href="#footer" class="menu__item text-default">Contacts</a></li>
-    </ul>
-    <div class="menu__lang">
-        <span class="menu__lang__selected text-default d-flex">Eng</span>
-        <ul class="menu__lang__list">
-            <li><a href="#" class="lang__list__item text-default">Arm</a></li>
-            <li><a href="#" class="lang__list__item text-default">Eng</a></li>
-            <li><a href="#" class="lang__list__item text-default">Rus</a></li>
+    <div class="menu__container">
+        <ul class="menu">
+            <li><a href="./index.html" class="menu__item text-default active">Home</a></li>
+            <li><a href="#services" class="menu__item text-default">Services</a></li>
+            <li><a href="#plans" class="menu__item text-default">Plans</a></li>
+            <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
+            <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
+            <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
+            <li><a href="#footer" class="menu__item text-default">Contacts</a></li>
         </ul>
+        <div class="menu__lang">
+            <span class="menu__lang__selected text-default d-flex">Eng</span>
+            <ul class="menu__lang__list">
+                <li><a href="#" class="lang__list__item text-default">Arm</a></li>
+                <li><a href="#" class="lang__list__item text-default">Eng</a></li>
+                <li><a href="#" class="lang__list__item text-default">Rus</a></li>
+            </ul>
+        </div>
     </div>
     <img src="assets/images/icons/hamburger-menu-icon.svg" class="mobile__menu__icon" alt="Menu">
 </nav>
@@ -72,21 +74,34 @@
     </div>
 
     <div class="row page__description">
-        <div class="col-lg-6 col-12 page__description__left">
-            <div class="service__hexagon page__description__hexagon hx-0">
-                <span class="portfolio__hexagon__text">Product photo</span>
-            </div>
-            <div class="service__hexagon page__description__hexagon hx-1">
-                <span class="portfolio__hexagon__text">Product photo</span>
-            </div>
-            <div class="service__hexagon page__description__hexagon hx-2">
-                <span class="portfolio__hexagon__text">Asana</span>
-            </div>
-            <div class="service__hexagon page__description__hexagon hx-3">
-                <span class="portfolio__hexagon__text">Other Product</span>
-            </div>
-            <div class="service__hexagon page__description__hexagon hx-4">
-                <span class="portfolio__hexagon__text">Other Product</span>
+        <div class="col-lg-6 col-12 portfolio__hexagons">
+            <div class="main">
+                <div class="container_hx">
+                    <div class="service__hexagon">
+                        <span class="portfolio__hexagon__text">Product photo</span>
+                    </div>
+                    <div class="service__hexagon">
+                        <span class="portfolio__hexagon__text">Asana</span>
+                    </div>
+                    <div class="service__hexagon">
+                        <span class="portfolio__hexagon__text">Other Product</span>
+                    </div>
+                    <div class="service__hexagon">
+                        <span class="portfolio__hexagon__text">Other Product</span>
+                    </div>
+                    <div class="service__hexagon">
+                        <span class="portfolio__hexagon__text">Other Product</span>
+                    </div>
+                    <div class="service__hexagon">
+                        <span class="portfolio__hexagon__text">Other Product</span>
+                    </div>
+                    <div class="service__hexagon">
+                        <span class="portfolio__hexagon__text">Other Product</span>
+                    </div>
+                    <div class="service__hexagon">
+                        <span class="portfolio__hexagon__text">Other Product</span>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-lg-6 col-12">
